# WineQualityDetectionML

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: EDA.ipynb  ModelTraining.ipynb
src/: exception.py  utils.py
src/components/: data_ingestion.py  data_transformation.py  model_trainer.py
src/components/configs/: configurations.py
src/pipelines/: predict_pipeline.py
templates/: home.html
